# isopod

./: .gitignore  .gitmodules  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  jail.rs  lib.rs  names.rs  net.rs  paths.rs  snapshot.rs  stage.rs
crates/core/src/image/: kernel.rs  mod.rs  rootfs.rs  s3.rs
crates/core/src/net/: setup.rs
crates/core/src/vm/: build_fc.rs  console.rs  mod.rs  registry.rs  resources.rs
crates/core/tests/: fetch_kernel_network.rs
crates/fc-client/: Cargo.toml
crates/fc-client/src/: client.rs  error.rs  id.rs  lib.rs  models.rs  process.rs  vsock.rs
crates/fc-client/tests/: live_boot.rs
crates/guest-agent/: Cargo.toml
crates/guest-agent/src/: cmdline.rs  conn.rs  exec.rs  main.rs  net.rs  overlay.rs  reaper.rs  server.rs  sys.rs
crates/guest-agent/tests/: live_agent.rs  live_net.rs  live_overlay.rs
crates/jail/: Cargo.toml
crates/jail/src/: main.rs  sys.rs
crates/jail/tests/: live_jail.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
crates/proto/: Cargo.toml
crates/proto/src/: frame.rs  lib.rs  msg.rs
docs/: dogfood-findings.md  feasibility.md  getting-started.md  m4-verify.md  mcp-usage.md  sandbox-build.md  security-assessment.md
scripts/: README-m0-net.md  m0-net-spike.sh
skill/: SKILL.md
