[package]
name = "isopod-cli"
description = "Firecracker-microVM sandbox: ephemeral hardware-isolated runs with content-addressed environment stages (CLI: run, stage, vm, warmpool, setup, image, dev)."
version.workspace = true
edition.workspace = true
license.workspace = true

# Distro packaging (built by the release workflow with cargo-deb /
# cargo-generate-rpm; `dist/firecracker` is staged there by `dev build-fc`).
[package.metadata.deb]
name = "isopod"
maintainer = "Melissa <184648288+me1iissa@users.noreply.github.com>"
copyright = "2026, isopod contributors"
license-file = ["../../LICENSE", "0"]
section = "utils"
priority = "optional"
depends = "$auto"
recommends = "nftables, iproute2, e2fsprogs, squashfs-tools"
extended-description = """\
Boots a real Firecracker microVM per command (~0.4 s), execs over vsock, and
destroys it; persistence via immutable content-addressed stages that later
runs fork. Ships the isopod CLI, the MCP server for Claude Code, the rootless
jail helper, and prebuilt Firecracker + guest-agent binaries."""
assets = [
    ["target/release/isopod", "usr/bin/", "755"],
    ["target/release/isopod-mcp", "usr/bin/", "755"],
    ["target/release/isopod-jail", "usr/bin/", "755"],
    ["../../dist/firecracker", "usr/lib/isopod/", "755"],
    ["../../dist/isopod-guest-agent", "usr/lib/isopod/", "755"],
    ["../../README.md", "usr/share/doc/isopod/README.md", "644"],
]

[package.metadata.generate-rpm]
name = "isopod"
summary = "Firecracker-microVM sandbox for Claude Code and the shell"
license = "Apache-2.0"
assets = [
    { source = "target/release/isopod", dest = "/usr/bin/isopod", mode = "755" },
    { source = "target/release/isopod-mcp", dest = "/usr/bin/isopod-mcp", mode = "755" },
    { source = "target/release/isopod-jail", dest = "/usr/bin/isopod-jail", mode = "755" },
    { source = "dist/firecracker", dest = "/usr/lib/isopod/firecracker", mode = "755" },
    { source = "dist/isopod-guest-agent", dest = "/usr/lib/isopod/isopod-guest-agent", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/doc/isopod/LICENSE", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/isopod/README.md", mode = "644" },
]

[[bin]]
name = "isopod"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde = { workspace = true }
serde_json.workspace = true
isopod-core.workspace = true
