[package]
name = "isopod-core"
description = "isopod orchestrator library: VM lifecycle, stages, snapshots, netns slots, image pipeline, on-disk store."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
# VM lifecycle (M1 dev boot): the typed FC client + an async runtime to drive it.
isopod-fc = { workspace = true }
tokio = { workspace = true }
# Host<->guest RPC contract (M2 agent): async frame helpers behind the tokio feature.
isopod-proto = { workspace = true, features = ["tokio"] }
# Blocking HTTP: the image pipeline is a synchronous one-shot CLI path, so we
# opt the workspace reqwest into its `blocking` client (keeps the CLI runtime-free).
reqwest = { workspace = true, features = ["blocking", "query"] }
# Crate-local (not in the workspace set): S3 ListObjectsV2 XML parsing + home dir.
quick-xml = { version = "0.39", features = ["serialize"] }
dirs = "6"

[dev-dependencies]
tempfile = { workspace = true }
