[package]
name = "isopod-guest-agent"
description = "Static musl PID 1 for the guest: mounts, overlay assembly, clock sync, vsock exec RPC."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# The host<->guest wire contract. Default features only (no tokio): the guest
# agent is std-only and synchronous, so the musl binary never pulls an async
# runtime.
isopod-proto = { path = "../proto" }
# The only source of `unsafe` in the crate — every libc call is wrapped in `sys`.
libc = "0.2"

[dev-dependencies]
# The live integration test boots a real microVM and drives the agent over
# vsock. None of these reach the release binary (dev-deps are not linked into
# `cargo build`), so the static musl artifact stays proto + libc only.
isopod-fc = { path = "../fc-client" }
isopod-proto = { path = "../proto", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
