[package]
name = "isopod-mcp"
description = "isopod MCP server: rmcp 2.2 stdio server exposing sandbox_run and stage/vm tools over the Model Context Protocol."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "isopod-mcp"
path = "src/main.rs"

[dependencies]
# rmcp 2.2 official Rust MCP SDK: server macros, JSON-schema tool params, stdio.
rmcp = { version = "2.2", features = ["server", "macros", "transport-io"] }
# schemars derive for tool parameter structs (rmcp re-exports it, but a direct
# dep keeps `#[derive(JsonSchema)]` ergonomic and version-pinned).
schemars = "1"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
isopod-core = { workspace = true }
